testsuite/tests/annotations/should_fail/annfail13.stderr

annfail13.hs:4:14: error: [GHC-58481]
    Parse error on input ‘1’. Expected one of '#-}'
